# ml-tto

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: lcls_cheetah.ipynb  lcls_lattice_cheetah.pkl  test_scree.ipynb  threshold_demo.ipynb
ml_tto/: __init__.py  background.py  errors.py  saver.py
ml_tto/archiving/: lcls_injector.py
ml_tto/automatic_emittance/: automatic_emittance.py  emittance.py  image_projection_fit.py  plotting.py  scan_cropping.py  screen_profile.py  transmission.py  utils.py
ml_tto/automatic_phase_scan/: auto_phasing.ipynb  automatic_phase_scan.py
ml_tto/benchmarking/: test_auto_emittance_benchmark.py
ml_tto/diag0/: auto_6d.py  auto_alignment.py  auto_alignment_2.py  auto_diag0.py  auto_emittance.py  auto_focusing.py  auto_tcav_phasing.py  hyper_params.yaml  run_reconstruction.py  slurm_jobs.sh  utils.py
ml_tto/gpsr/: analysis.py  lcls_tools.py  matlab.py  matlab_parser.py  quadrupole_scan_fitting.py  utils.py  visualization.py
ml_tto/gpsr/diag0/: DIAG0.yaml  diag0.json  diag0_reconstruction.json  run_diag0.ipynb
ml_tto/gpsr/matlab/: matlab_quad_scan.ipynb
ml_tto/tests/: test_automatic_emittance.py  test_image_projection_fit.py  test_saver.py  test_scan_cropping.py  test_screen_profile_measurement.py  test_transmission_measurement.py  test_utils.py
ml_tto/tests/fixtures/: test_emittance_result.h5  test_plot_emittance_measurement_data.npz
ml_tto/tests/gpsr/: test_gpsr_lcls_tools.py  test_gpsr_utils.py  test_utils.py
