[build-system]
requires = ["setuptools >= 75.0",  "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "The Board of Trustees of the Leland Stanford Junior University, through SLAC National Accelerator Laboratory"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyepics",
    "pyyaml",
    "requests",
    "pydantic",
    "h5py",
    "scikit-learn",
    "xopt",
    "cheetah-accelerator",
    "lcls_tools @ git+https://github.com/slaclab/lcls-tools.git"
]
description = "Tools to support high level application development at LCLS using Python"
dynamic = ["version"]
name = "ml_tto"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser"
]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/slaclab/ml-tto"

[options]
include_package_data = true

[tool.setuptools.packages.find]
include = ["ml_tto*"]

[project.license]
file = "LICENSE"
